[package]
name = "oj"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.42", features = ["derive"] }
log = "0.4.19"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "macros",
] }
directories = "6.0.0"
chrono = "0.4.41"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
anyhow = "1.0.99"
libc = "0.2"
parking_lot = "0.12"

[dev-dependencies]
assert-json-diff = "2.0.2"
lazy_static = "1.4.0"
pretty_assertions = "1.3.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
